loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
do {
^Poucet2:3: error: ';' expected but '{' found.
}while (crossing() == false) {
                             ^